objects/BBB_Day_Direct_Bill_Book_Bklg_Cust_PN__c.object
<CustomObject>
    <description>Daily bookings, billings and backlog by customer (Account) and Part, includes Direct Sales / Distribution POS / CMA (Contract Manufacturer&apos;s Allocation)</description>
    <fields>
        <fullName>Backlog_Amount_Document__c</fullName>
        <inlineHelpText>Current Backlog - Documented Currency</inlineHelpText>
        <label>Backlog Amount - Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Backlog_Amount_USD__c</fullName>
        <inlineHelpText>Backlog Amount - Backlog Amount - C$</inlineHelpText>
        <label>Backlog Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backlog_Past_Due_Req_Amount_Document__c</fullName>
        <inlineHelpText>Backlog Amount Past Due By Cust Req - Documented Currency</inlineHelpText>
        <label>Backlog Past Due Req Amount - Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Backlog_Past_Due_Req_Amount_USD__c</fullName>
        <inlineHelpText>Backlog Amount Past Due By Cust Req - C$</inlineHelpText>
        <label>Backlog Past Due Req Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backlog_Past_Due_Sched_Amount_Document__c</fullName>
        <inlineHelpText>Backlog Amount Past Due By Sched - Documented Currency</inlineHelpText>
        <label>Backlog Past Due Sched Amount - Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Backlog_Past_Due_Sched_Amount_USD__c</fullName>
        <inlineHelpText>Backlog Amount Past Due By Sched Date - C$</inlineHelpText>
        <label>Backlog Past Due Sched Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backlog_Qty_Past_Due_Req__c</fullName>
        <inlineHelpText>Backlog Qty Past Due By Cust Req</inlineHelpText>
        <label>Backlog Qty - Past Due Req</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backlog_Qty_Past_Due_Sched__c</fullName>
        <inlineHelpText>Backlog Qty Past Due By Sched Date</inlineHelpText>
        <label>Backlog Qty - Past Due Sched</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backlog_Qty__c</fullName>
        <inlineHelpText>Backlog Qty</inlineHelpText>
        <label>Backlog Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Amount_Document__c</fullName>
        <inlineHelpText>Billings - Documented Currency</inlineHelpText>
        <label>Bill Amount - Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Amount_USD__c</fullName>
        <inlineHelpText>Constant TE Billing Amount</inlineHelpText>
        <label>Bill Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Cost_Amount__c</fullName>
        <inlineHelpText>Billing Cost - Authoritative Cost Amount</inlineHelpText>
        <label>Bill Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Qty__c</fullName>
        <inlineHelpText>Billing Quantity</inlineHelpText>
        <label>Bill Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Type_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill Type Filter</label>
        <referenceTo>Cross_Dashboard_Filter__c</referenceTo>
        <relationshipLabel>Daily Booking/Billing/Backlog By Parts (Bill Type Filter)</relationshipLabel>
        <relationshipName>Daily_Booking_Billing_Backlog_By_Parts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_Type__c</fullName>
        <inlineHelpText>Direct Sales / Distribution POS / CMA (Contract Manufacturer&apos;s Allocation)</inlineHelpText>
        <label>Bill Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                    <default>true</default>
                    <label>Direct</label>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>CMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billings_Margin__c</fullName>
        <description>This formula calculates the daily billings margin.</description>
        <formula>IF(Bill_Amount_USD__c &gt; 0, (Bill_Amount_USD__c - Bill_Cost_Amount__c) / Bill_Amount_USD__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billings Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Book_Amount_Document__c</fullName>
        <inlineHelpText>Bookings - Documented Currency</inlineHelpText>
        <label>Book Amount - Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Amount_USD__c</fullName>
        <inlineHelpText>Constant TE Booking Amount</inlineHelpText>
        <label>Book Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Cost_Amount__c</fullName>
        <inlineHelpText>Booking Cost - GCS Frozen True Cost</inlineHelpText>
        <label>Book Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Qty__c</fullName>
        <inlineHelpText>Book Quantity</inlineHelpText>
        <label>Book Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Margin__c</fullName>
        <description>This formula calculates the daily bookings margin.</description>
        <formula>(Book_Amount_USD__c - Book_Cost_Amount__c) / Book_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CBC_1_Code__c</fullName>
        <formula>Part__r.Product_Hierarchy__r.CBC1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 1 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC_1_Description__c</fullName>
        <formula>Part__r.Product_Hierarchy__r.CBC1_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 1 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC_2_Code__c</fullName>
        <formula>Part__r.Product_Hierarchy__r.CBC2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 2 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC_2_Description__c</fullName>
        <formula>Part__r.Product_Hierarchy__r.CBC2_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 2 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC_3_Code__c</fullName>
        <formula>Part__r.Product_Hierarchy__r.CBC3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 3 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC_3_Description__c</fullName>
        <formula>Part__r.Product_Hierarchy__r.CBC3_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 3 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Schedule_Date__c</fullName>
        <inlineHelpText>Date the product is scheduled to ship to the customer</inlineHelpText>
        <label>Current Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Date_Fiscal_Date__c</fullName>
        <formula>DATE(  VALUE(Customer_Request_Date_Fiscal_Year__c) , Customer_Request_Date_Fiscal_Month__c ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Request Date Fiscal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Date_Fiscal_Month__c</fullName>
        <label>Customer Request Date Fiscal Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Date_Fiscal_Year__c</fullName>
        <label>Customer Request Date Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Date__c</fullName>
        <inlineHelpText>Date the customer has requested the product</inlineHelpText>
        <label>Customer Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <inlineHelpText>TE Customer</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Daily Booking/Billing/Backlog By Parts</relationshipLabel>
        <relationshipName>Daily_BBBs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Daily_BBB_External_Key__c</fullName>
        <description>External Id for upserting composed of:
CUSTOMER_KEY_ID || Bill Type || SAP Profit Center || PART_KEY_ID || TRANSACTION_DT || CURRENT_SCHEDULE_DT || CUSTOMER_REQUEST_DT || DOC_ISO_CURRENCY_CDE .
Populated on records by the automated integration.</description>
        <externalId>true</externalId>
        <label>Daily BBB External Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Date__c</fullName>
        <formula>DATE( VALUE( Fiscal_Year__c ) ,  Fiscal_Month__c ,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <inlineHelpText>Identifies the TE Fiscal Month of the Sales</inlineHelpText>
        <label>Fiscal Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <inlineHelpText>Identifies the TE Fiscal Month of the Sale</inlineHelpText>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL__c</fullName>
        <formula>Part__r.Product_Hierarchy__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_Profit_Centre_Groups__c</fullName>
        <description>combines individual SAP Profit centers into the Industrial Sub-Vertical groups</description>
        <formula>CASE(SAP_Profit_Center_Code__c,
&apos;0000000268&apos;, &apos;A&amp;C&apos;,
&apos;0000000412&apos;, &apos;Systems&apos;,
&apos;0000000419&apos;, &apos;Devices&apos;,
&apos;0000000418&apos;, &apos;Systems&apos;,
&apos;0000000292&apos;, &apos;A&amp;C&apos;,
&apos;0000000266&apos;, &apos;IB&apos;,
&apos;0000000291&apos;, &apos;IB&apos;,
&apos;0000000294&apos;, &apos;IB&apos;,
&apos;0000000254&apos;, &apos;IB&apos;,
&apos;0000000265&apos;, &apos;Rail&apos;,
&apos;0000000293&apos;, &apos;Rail&apos;,
&apos;0000000290&apos;, &apos;Rail&apos;, &apos;&apos;)</formula>
        <label>IND Profit Centre Groups</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Load Status</label>
        <referenceTo>Load_Status__c</referenceTo>
        <relationshipLabel>Daily Booking/Billing/Backlog By Parts</relationshipLabel>
        <relationshipName>Daily_Booking_Billing_Backlog_By_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>My_BU__c</fullName>
        <formula>IF(AND(TEXT($User.Sub_Vertical__c) =  SAP_Profit_Center__c,  ISPICKVAL(Bill_Type__c, &quot;Direct&quot;)) , &quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to mark a record to be deleted. Any record marked true should not be used anywhere</description>
        <inlineHelpText>If checked the record will be deleted from the system</inlineHelpText>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <description>Tyco Part Number</description>
        <inlineHelpText>Tyco Part Number</inlineHelpText>
        <label>TCPN</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Daily Booking/Billing/Backlog By Parts</relationshipLabel>
        <relationshipName>Daily_BBBs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <inlineHelpText>TE Business Unit Profit Center for the Sale</inlineHelpText>
        <label>Profit Center</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>End Region the sale took place</inlineHelpText>
        <label>Region</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Code_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAP Profit Center Code Filter</label>
        <referenceTo>Cross_Dashboard_Filter__c</referenceTo>
        <relationshipLabel>Daily Booking/Billing/Backlog By Parts (SAP Profit Center Code Filter)</relationshipLabel>
        <relationshipName>Daily_Booking_Billing_Backlog_By_Parts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Code__c</fullName>
        <label>SAP Profit Center Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Group_Code_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAP Profit Center Group Code Filter</label>
        <referenceTo>Cross_Dashboard_Filter__c</referenceTo>
        <relationshipLabel>Daily Booking/Billing/Backlog By Parts (SAP Profit Center Group Code Filter)</relationshipLabel>
        <relationshipName>Daily_Booking_Billing_Backlog_By_Parts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Group_Code__c</fullName>
        <label>SAP Profit Center Group Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Grp_Short_Desc_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SAP Profit Center Group Short Description Cross Dashboard Filter Lookup</description>
        <inlineHelpText>SAP Profit Center Group Short Description Cross Dashboard Filter Lookup</inlineHelpText>
        <label>SAP Profit Center Grp Short Desc Filter</label>
        <referenceTo>Cross_Dashboard_Filter__c</referenceTo>
        <relationshipLabel>Daily Booking/Billing/Backlog By Parts (SAP Profit Center Grp Short Desc Filter)</relationshipLabel>
        <relationshipName>SAP_Profit_Center_Grp_Short_Desc_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Short_Desc_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SAP Profit Center Short Description Filter</description>
        <inlineHelpText>SAP Profit Center Short Description Filter</inlineHelpText>
        <label>SAP Profit Center Short Desc Filter</label>
        <referenceTo>Cross_Dashboard_Filter__c</referenceTo>
        <relationshipLabel>Daily Booking/Billing/Backlog By Parts</relationshipLabel>
        <relationshipName>Daily_Booking_Billing_Backlog_By_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Short_Description__c</fullName>
        <label>SAP Profit Center Short Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center__c</fullName>
        <inlineHelpText>Identifies the SAP (Industry Vertical) Profit Center Group</inlineHelpText>
        <label>SAP Profit Center Group Short Desc</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <inlineHelpText>Date the transactions took place</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Daily Booking/Billing/Backlog By Part</label>
    <nameField>
        <displayFormat>DBBB-{0}</displayFormat>
        <label>Daily BBB Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Booking/Billing/Backlog By Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>